--- a/pyramids_map33.html
+++ b/pyramids_map33.html
@@ -485,7 +485,7 @@
                 <source src="孟卡拉金字塔语音讲解.mp3" type="audio/mpeg">  
             </audio>
         </div>
-        <img src="金字塔景区地区（en）.png" alt="吉萨金字塔景区地图" usemap="#pyramids-map">
+        <img src="金字塔景区地区（中文）.png" alt="吉萨金字塔景区地图" usemap="#pyramids-map">
         <!-- 添加明显的金字塔点击标记，使用百分比定位 -->
         <div class="clickable-marker khafre-marker" onclick="playKhafraAudio()"></div>
         <div class="clickable-marker khufu-marker" onclick="playKhufuAudio()"></div>
