--- a/D-网页1.html
+++ b/D-网页1.html
@@ -596,7 +596,7 @@
                                 <div style="margin: 15px 0; text-align: center;">
                                     <div style="background: #f0f0f0; border-radius: 12px; padding: 15px; display: inline-block;">
                                         <a href="https://applink.dingtalk.com/client/aiAgent?assistantId=affee3c5ce744b4d916227d29808bdbc&from=share" target="_blank">
-                                            <img src="DDQC.png" alt="钉钉AI智能体二维码" style="width:150px; height:auto; border-radius:8px; display:block;">
+                                            <img src="DDQC.jpg" alt="钉钉AI智能体二维码" style="width:150px; height:auto; border-radius:8px; display:block;">
                                         </a>
                                     </div>
                                 </div>
