--- a/D-网页1.html
+++ b/D-网页1.html
@@ -585,7 +585,7 @@
                                     </div>
                                     <div class="step">
                                         <div class="step-number">2</div>
-                                        <div>打开钉钉扫描下方二维码</div>
+                                        <div>点击下方二维码</div>
                                     </div>
                                     <div class="step">
                                         <div class="step-number">3</div>
