--- a/D-网页1.html
+++ b/D-网页1.html
@@ -460,32 +460,39 @@
                             <p>实训过程中可随时观看这些操作演示视频，回顾关键步骤和技术要点，解决操作中的疑问。</p>
                             
                             <ul class="video-list" id="practice-videos"> 
-                                <li data-video-type="iframe" data-video-src="" data-duration="8:00" data-description="砂箱准备与造型的详细步骤和注意事项。"> 
+                                <li data-video-type="iframe" data-video-src="https://cdn.jsdelivr.net/gh/shpzy/alibaba@main/video2.1.mp4" data-duration="1:20" data-description="砂箱准备与造型的详细步骤和注意事项。"> 
                                     <i class="fas fa-play-circle video-icon"></i>
                                     <div>
-                                        <div class="video-title">砂箱准备与造型</div>
-                                        <div class="video-duration">8:00</div>
+                                        <div class="video-title">砂箱准备与介绍</div>
+                                        <div class="video-duration">1:20</div>
                                     </div>
                                 </li>
-                                <li data-video-type="iframe" data-video-src="" data-duration="10:00" data-description="模型如何正确放置以及填砂的技巧。"> 
+                                <li data-video-type="iframe" data-video-src="https://cdn.jsdelivr.net/gh/shpzy/alibaba@main/video2.2.mp4" data-duration="4:05" data-description="模型如何正确放置以及填砂的技巧。"> 
                                     <i class="fas fa-play-circle video-icon"></i>
                                     <div>
                                         <div class="video-title">模型放置与填砂</div>
                                         <div class="video-duration">10:00</div>
                                     </div>
                                 </li>
-                                 <li data-video-type="iframe" data-video-src="" data-duration="7:00" data-description="起模与合型操作的详细演示。"> 
+                                 <li data-video-type="iframe" data-video-src="https://cdn.jsdelivr.net/gh/shpzy/alibaba@main/video2.3.mp4" data-duration="4:30" data-description="上沙箱造型与起模操作的详细演示。"> 
                                     <i class="fas fa-play-circle video-icon"></i>
                                     <div>
-                                        <div class="video-title">起模与合型操作</div>
-                                        <div class="video-duration">7:00</div>
+                                        <div class="video-title">上沙箱造型与起模</div>
+                                        <div class="video-duration">4:30</div>
                                     </div>
                                 </li>
-                                <li data-video-type="local" data-video-src="https://cdn.jsdelivr.net/gh/shpzy/alibaba@main/video2.1.mp4" data-duration="14:00" data-description="浇注过程以及后续清理工作的工艺流程。"> 
+                                <li data-video-type="iframe" data-video-src="https://cdn.jsdelivr.net/gh/shpzy/alibaba@main/video2.4.mp4" data-duration="3:22" data-description="取出模样及造砂型浇筑系统操作的详细演示。"> 
+                                    <i class="fas fa-play-circle video-icon"></i>
+                                    <div>
+                                        <div class="video-title">取模样与造浇筑系统</div>
+                                        <div class="video-duration">3:22</div>
+                                    </div>
+                                </li>
+                                <li data-video-type="local" data-video-src="https://cdn.jsdelivr.net/gh/shpzy/alibaba@main/video2.5.mp4" data-duration="2:29" data-description="浇注过程以及后续清理工作的工艺流程。"> 
                                     <i class="fas fa-play-circle video-icon"></i>
                                     <div>
                                         <div class="video-title">浇注与清理工艺</div>
-                                        <div class="video-duration">14:00</div>
+                                        <div class="video-duration">2:29</div>
                                     </div>
                                 </li>
                             </ul>
